--- a/css/partners.css
+++ b/css/partners.css
@@ -1,6 +1,6 @@
 .partners{
     background-color: #040c18;
-    padding: 40px 0;
+    padding: 80px 0 40px;
 }
 .partners .container{
     display: flex;
